# experiments

ResearchTrader/: .env.sample  README.md  pyproject.toml  scripts.sh
ResearchTrader/docs/: endpoints.md  project-doc.md  user-flow.md
ResearchTrader/nbs/: rework.ipynb  test-notebook.ipynb  test.ipynb
ResearchTrader/research_trader/: app.py  config.py  main.py
ResearchTrader/research_trader/models/: __init__.py  paper.py  strategy.py  summary.py
ResearchTrader/research_trader/router/: papers.py  qa.py  search.py  strategy.py  summarize.py
ResearchTrader/research_trader/services/: __init__.py  arxiv_client.py  arxiv_service.py  cache.py  cache_service.py  openai_client.py  openai_service.py  paper_processing_service.py  pdf_service.py
ResearchTrader/research_trader/utils/: errors.py
a2a/: client.py  server.py
alibaba/: llm-router.py  llm.py
computaitonal-tools/: module1.ipynb  study-guide.md
crawl4ai/: first-iteration.ipynb
crewai/: tools.py
insights/: README.md  pyproject.toml
insights/agent-cards/: db_summary_agent.md  insight_agent.md  insights_consolidation_agent.md  question_generation_agent.md  report_generation_agent.md  text2sql_agent.md
insights/insights/: config.py  llm.py  utils.py
insights/insights/agents/: db_summary_agent.py  insight_agent.py  insights_consolidation_agent.py  question_generating_agent.py  report_generation_agent.py  text2sql_agent.py
insights/insights/deprecated/agents/: insight_agent.py  insights_consolidation_agent.py  report_agent.py  text2sql_agent.py
insights/nbs/: insights.ipynb  insights_consolidation.ipynb  llms.ipynb  report.ipynb  text2sql.ipynb
insights/tests/: generate_db.py
langchain/: tools.py
nbs/: chroma.sqlite3  pydantic.ipynb  vanna.ipynb
pydantic/: llm-router.py  llm.py
stt/: stt.py
